@@ -67,6 +67,7 @@ typedef enum {
                                                                       \
   decl t##_IDMAP *pr##_IdMap_new(GWEN_IDMAP_ALGO algo);               \
   decl void pr##_IdMap_free(t##_IDMAP *l);                            \
+  decl void pr##_IdMap_freeAll(t##_IDMAP *l);                         \
   decl GWEN_IDMAP_RESULT pr##_IdMap_Insert(t##_IDMAP *l,              \
                                            GWEN_TYPE_UINT32 id,       \
                                            t* ptr);                   \
@@ -92,6 +93,24 @@ typedef enum {
                                                                      \
   void pr##_IdMap_free(t##_IDMAP *l) {                               \
     GWEN_IdMap_free((GWEN_IDMAP*)l);                                 \
+  }                                                                  \
+                                                                     \
+  void pr##_IdMap_freeAll(t##_IDMAP *l) {                            \
+    GWEN_IDMAP_RESULT res;                                           \
+    GWEN_TYPE_UINT32 id;                                             \
+					      		             \
+    res=pr##_IdMap_GetFirst(l, &id);                                 \
+    while(res==GWEN_IdMapResult_Ok) {                                \
+      GWEN_TYPE_UINT32 nextId;                                       \
+      t *ptr;                                                        \
+								     \
+      res=pr##_IdMap_GetNext(l, &nextId);                            \
+      ptr=pr##_IdMap_Find(l, id);                                    \
+      if (ptr)                                                       \
+	pr##_free(ptr);                                              \
+      id=nextId;                                                     \
+    }                                                                \
+    pr##_IdMap_free(l);                                              \
   }                                                                  \
                                                                      \
   GWEN_IDMAP_RESULT pr##_IdMap_Insert(t##_IDMAP *l,                  \
